<resources>
    <string name="app_name">JuanJacobo_Assignment4</string>
    <string name="btnReturn">Back</string>
    <string name="title">InstaFeed</string>
    <string name="btnSubmit">Submit</string>
    <string name="addReview">Add Review</string>
    <string name="btnHelp">\?</string>
    <string name="reviewTittle">InstaFeed Reviews</string>
    <string name="helpTittle">Help Menu</string>
    <string name="paragraph1">Welcome to the help menu, here is some important information that might be helpfull in your experience</string>
    <string name="paragraph2">
        On the starting page, you will see a list of all the restaurants with reviews from users around the world.
        If you tap on a restaurant record, you will be redirected to the details page, where you can see the location, feedback provided by the user,
        and a picture if the user decides to add one.
    </string>
    <string name="paragraph3">
        On the review page, you will be able to submit as a user your experience in a restaurant, you need to approve the use of location services
        to get the location from the restaurant you are revising, you can send the rating in stars, add extra feedback, and upload an image if you desire.
    </string>
    <string name="paragraph4">If you want to know more about us, feel free to check our About Us page, On that page you will find more information about the developer and the app.</string>
    <!--For the context menu-->
    <string name="review">Review</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="about1">
        This page is based on the services provided by Google Maps to rate a restaurant, based on the user rating, a description of how was the experience if
        the user decided to enter it, and at the same time a space to add an optional picture about the restaurant, menu, food, etc.
    </string>
    <string name="about2">
        The application implements a database helper to store all the restaurant information, implements navigation between pages, and saves the new data
        entered by the user with shared preferences, it\'s a suitable app for users who want to check a quick restaurant review before they go so they have an
        idea of what they can expect.
    </string>
    <string name="imgtitle">Attach an image\n(Optional)</string>
    <id name="review"/>
    <id name="aboutUs"/>
    <id name="help"/>
    <id name="settings"/>
    <!--<array name="restaurants">
        <item>Tim Hurtons</item>
        <item>Burger King</item>
        <item>Chuck's</item>
        <item>Wendy's</item>
        <item>McDonald's</item>
        <item>KFC</item>
    </array>-->
</resources>