<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003049">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="226dp"
        android:layout_height="43dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="40dp"
        android:text="@string/helpTittle"
        android:textAlignment="center"
        android:textSize="80px"
        android:textColor="#E0E1DD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="341dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/paragraph1"
        android:textSize="40px"
        android:textColor="#E0E1DD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="339dp"
        android:layout_height="116dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="19dp"
        android:text="@string/paragraph2"
        android:textSize="40px"
        android:textColor="#E0E1DD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="339dp"
        android:layout_height="116dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="17dp"
        android:text="@string/paragraph3"
        android:textSize="40px"
        android:textColor="#E0E1DD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="342dp"
        android:layout_height="76dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/paragraph4"
        android:textSize="40px"
        android:textColor="#E0E1DD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/btnHpBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="439dp"
        android:text="@string/btnReturn"
        android:backgroundTint="#c1121f"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />
</androidx.constraintlayout.widget.ConstraintLayout>