<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003049"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnReview"
        android:layout_width="123dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="#669bbc"
        android:text="@string/addReview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="#669bbc"
        android:text="@string/about_us"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spRestaurant"
        android:layout_width="255dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="76dp"
        android:textColor="#E0E1DD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textColor="#E0E1DD"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="355dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="Welcome to InstaFeed, select each restaurant for more information, you can use the combo boxes for a more accurate search"
        android:textColor="#E0E1DD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ListView
        android:id="@+id/restaurantListView"
        android:layout_width="351dp"
        android:layout_height="394dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        android:textColor="#fdf0d5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spRestaurant" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="53dp"
        android:layout_height="49dp"
        android:layout_marginStart="324dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="34dp"
        android:backgroundTint="#669bbc"
        android:text="@string/btnHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>