<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003049">

    <TextView
        android:id="@+id/textView"
        android:layout_width="161dp"
        android:layout_height="41dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="36dp"
        android:text="About Us"
        android:textAlignment="center"
        android:textColor="#E0E1DD"
        android:textSize="80px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:text="Done by: Juan Francisco Jacobo Rodriguez"
        android:textSize="40px"
        android:textColor="#E0E1DD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="355dp"
        android:layout_height="118dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/about1"
        android:textColor="#E0E1DD"
        android:textSize="40px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="353dp"
        android:layout_height="131dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="156dp"
        android:text="@string/about2"
        android:textColor="#E0E1DD"
        android:textSize="40px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnAReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="216dp"
        android:text="@string/btnReturn"
        android:backgroundTint="#c1121f"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>