<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003049">

    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="196dp"
        android:backgroundTint="#780000"
        android:text="Capture Image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtExtraInfo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="326dp"
        android:layout_height="51dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/reviewTittle"
        android:textSize="100px"
        android:textColor="#fdf0d5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="313dp"
        android:layout_height="34dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="46dp"
        android:text="Provide more feedback about the services (Optional)"
        android:textColor="#fdf0d5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRvReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="636dp"
        android:backgroundTint="#c1121f"
        android:text="@string/btnReturn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="40dp"
        android:text="Please rate from 0-5 your experience at the restaurant"
        android:textColor="#fdf0d5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="134dp"
        android:layout_height="33dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="376dp"
        android:text="@string/imgtitle"
        android:textColor="#fdf0d5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRvSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="288dp"
        android:layout_marginTop="636dp"
        android:backgroundTint="#669bbc"
        android:text="@string/btnSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#fdf0d5"
        android:hint="Enter Restaurant Name"
        android:textColorHint="#fdf0d5"
        android:textColor="#fdf0d5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <RatingBar
        android:id="@+id/rbRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#fdf0d5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <!-- Date Picker -->

    <EditText
        android:id="@+id/txtExtraInfo"
        android:layout_width="278dp"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#fdf0d5"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Ex: Food Quality, installations, etc"
        android:inputType="textMultiLine"
        android:textColor="#fdf0d5"
        android:textColorHint="#fdf0d5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbRating" />

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="134dp"
        android:layout_height="129dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />
</androidx.constraintlayout.widget.ConstraintLayout>